fix: уберет ненужные scrollbar

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -15,7 +15,7 @@ body,
     height: 100%;
 }
 .app-root {
-    overflow: scroll;
+    overflow: auto;
     width: 100%;
     height: 100%;
 }
